@@ -6227,15 +6227,14 @@ void WebView::exitFullscreen()
 #endif
 }
 
-static PassOwnPtr<Vector<String> > toStringVector(unsigned patternsCount, BSTR* patterns)
+static Vector<String> toStringVector(unsigned patternsCount, BSTR* patterns)
 {
-    // Convert the patterns into a Vector.
-    if (patternsCount == 0)
-        return nullptr;
-    OwnPtr<Vector<String> > patternsVector = adoptPtr(new Vector<String>);
+    Vector<String> patternsVector;
+    if (!patternsCount)
+        return patternsVector;
     for (unsigned i = 0; i < patternsCount; ++i)
-        patternsVector->append(toString(patterns[i]));
-    return patternsVector.release();
+        patternsVector.append(toString(patterns[i]));
+    return patternsVector;
 }
 
 HRESULT WebView::addUserScriptToGroup(BSTR groupName, IWebScriptWorld* iWorld, BSTR source, BSTR url, 
